Fix layout issues on mobile view.

--- a/PlantThyme/src/components/features/features.css
+++ b/PlantThyme/src/components/features/features.css
@@ -1,7 +1,7 @@
 /* Care Instructions ---------------------------------------------------------------------------------- */
 #careInstructions {
     width: 100%;
-    margin: 2rem 0;
+    margin: 1rem 0;
     padding: 0 1rem;
 }
 
