--- a/PlantThyme/src/components/layout/layout.css
+++ b/PlantThyme/src/components/layout/layout.css
@@ -70,7 +70,7 @@ nav {
 
 nav a {
     color: black;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     font-weight: bold;
     text-decoration: none;
     font-family: var(--regular-font);
